<resources>
    <string name="app_name">4aWalk</string>
    <string name="logo_description">Logo de l application 4awaklk</string>

    <!-- Affichage utilisateur connexion et inscription -->
    <string-array name="niveau_array">
        <item>Choisir votre niveau</item>
    </string-array>

    <string-array name="niveaux">
        <item>Choisir le niveau</item>
        <item>DEBUTANT</item>
        <item>ENTRAINE</item>
        <item>SPORTIF</item>
    </string-array>

    <string-array name="morphologie_array">
        <item>Choisir votre morphologie</item>
    </string-array>

    <string-array name="morphologies">
        <item>Choisir la morphologie</item>
        <item>LEGERE</item>
        <item>MOYENNE</item>
        <item>FORTE</item>
    </string-array>

    <string name="retour">Retour</string>
    <string name="TitreInscription">Créer un compte</string>
    <string name="btnConnecter">Se connecter</string>
    <string name="btnConnexion">Connexion</string>
    <string name="btnInscrire">S inscrire</string>

    <string name="recherche_rando">Rechercher une randonnée</string>
    <string name="recherche_parcours">Rechercher un parcours</string>
    <string name="onglet_parcours">Parcours</string>
    <string name="onglet_randonnees">Randonnées</string>
    <string name="hike_name">Nom:</string>
    <string name="hike_start">Départ:</string>
    <string name="hike_finish">Arrivée:</string>
    <string name="hike_duration">Durée (en jours):</string>
    <string name="participants">Participants:</string>
    <string name="points_of_interest">Point(s) d\'intérêt(s): </string>
    <string name="product">Produits: </string>
    <string name="equipment">Equipement: </string>
    <string name="data_error_message">Récupération des données impossibles. Veuillez réessayer</string>
    <string name="no_hikes_message">Vous ne possédez aucune randonnée.</string>
    <string name="no_course_message">Vous ne possédez aucun parcours.</string>
    <string name="create_button_text">Valider</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>

    <!-- Erreurs liées à la connexion utilisateur -->
    <string name="erreur_donnees_util_connexion">Email ou mot de passe incorrect</string>
    <string name="erreur_serveur">Erreur serveur</string>
    <string name="erreur_acces">Accès refusé</string>
    <string name="erreur_ressource">Ressource non trouvée</string>

    <string name="titrePopup">Participant</string>
    <string name="age">Âge</string>
    <string name="besoinKCAL">Besoin kcal/jour</string>
    <string name="besoinEAU">Besoin en eau (L)</string>
    <string name="sac">Possède un sac à dos</string>
    <string name="capacite">Capacité (kg) du sac</string>
    <string name="ajouterP">Ajouter le participant</string>
    <string name="btnSac">Voir le sac à dos</string>

    <string name="btnAnnuler">Annuler</string>
    <string name="btnValider">Valider</string>
    <string name="btnAjouter">Ajouter</string>
    <string name="btnSupprimer">Supprimer</string>
    <string name="btnModifier">Modifier</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="bouton_modifier_randonnee">Modifier la randonnée</string>
    <string name="bouton_ajouter_randonnee">Ajouter la randonnée</string>
    <string name="randonne_placeholder">Randonné 1</string>
    <string name="parcours_placeholder">Parcours 1</string>
    <string name="ajouter_un_participant">Ajouter un participant</string>
    <string name="ajouter_un_point">Ajouter un point</string>
    <string name="optimiser">Optimiser</string>
    <string name="gestion_compte">Gestion du compte</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="nourritures">Nourritures</string>
    <string name="equipements">Équipements</string>
    <string name="demarrer_parcours">Démarrer un parcours</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="choisir_le_point_d_arriv_e">Choisir le point d\'arrivée</string>
    <string name="choisir_le_point_de_d_part">Choisir le point de départ</string>
    <string name="ajouter_un_quipement">Ajouter un équipement</string>
    <string name="produits_alimentaires">Produits Alimentaires</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="ajouter_un_nouveau_produit">Ajouter un nouveau produit</string>
    <string name="adresse_personnelle">Adresse personnelle</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="date_de_r_alisation">Date de réalisation :</string>
    <string name="randonn_e">Randonnée :</string>
    <string name="reprendre">Reprendre</string>
    <string name="terminer">Terminer</string>
    <string name="hint_nom_du_point">Nom du point (ex: Source d\'eau)</string>
    <string name="hint_appui_carte">Appuyez sur la carte pour placer le point</string>
    <string name="modifier_votre_compte">Modifier votre compte</string>
    <string name="valider">Valider</string>
    <string name="masse_vide_en_g_optionnel">Masse à vide en g (Optionnel)</string>
    <string name="propri_taire">Propriétaire :</string>
    <string name="type_d_quipement">Type d\'équipement :</string>
    <string name="pour_combien_de_personne_s_1_3">Pour combien de personne(s) (1 à 3) :</string>
    <string name="masse_en_g_50_5000">Masse en g (50 à 5000)</string>
    <string name="nouvel_quipement">Nouvel Équipement</string>
    <string name="nom_obligatoire">Nom (Obligatoire)</string>
    <string name="description_obligatoire">Description (Obligatoire)</string>
    <string name="nouveau_produit_alimentaire">Nouveau Produit Alimentaire</string>
    <string name="appellation_courante_obligatoire">Appellation courante (Obligatoire)</string>
    <string name="conditionnement_obligatoire">Conditionnement (Obligatoire)</string>
    <string name="apport_kcal_50_3000">Apport Kcal (50 à 3000)</string>
    <string name="prix_en_0"><![CDATA[Prix en € (>= 0)]]></string>
    <string name="annuler">Annuler</string>
    <string name="ajouter">Ajouter</string>
    <string name="remplir_depuis_un_participant_existant">Remplir depuis un participant existant :</string>
    <string name="contenu_du_sac">Contenu du sac</string>
    <string name="d_tails_des_quipements_et_de_la_nourriture">Détails des équipements et de la nourriture</string>
    <string name="inventaire">Inventaire</string>
    <string name="qt">Qté</string>
    <string name="nom_de_l_item">Nom de l\'item</string>
    <string name="poids">Poids</string>

</resources>