<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_poi_nom"
        android:hint="@string/hint_nom_du_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_appui_carte"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        android:textColor="#666666"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="8dp">

        <org.osmdroid.views.MapView
            android:id="@+id/map_poi"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <EditText
        android:id="@+id/edit_poi_lat"
        android:hint="@string/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/edit_poi_lon"
        android:hint="@string/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"/>

</LinearLayout>