<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/marron"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hike_details_margin"
        android:paddingHorizontal="@dimen/hike_details_margin"
        android:background="@color/marron_fonce"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/hike_name"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/nom_rando"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/hike_start"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/depart_rando"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/hike_finish"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/arrivee_rando"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="3"/>

        </GridLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points_of_interest"
            android:textColor="@color/black"/>
        <ListView
            android:id="@+id/points_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hike_duration"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/spinner_jours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textColor="@color/black"/>
        </LinearLayout>
        <ListView
            android:id="@+id/liste_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textColor="@color/black"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </GridLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textColor="@color/black"/>
    </LinearLayout>


</ScrollView>
