<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/marron"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/hike_details_margin"
        android:paddingHorizontal="@dimen/hike_details_margin"
        android:background="@color/marron_fonce"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hike_name"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/nom_rando"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textCapSentences"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hike_start"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/depart_rando_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/latitude"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/depart_rando_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/longitude"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hike_finish"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/arrivee_rando_lat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/latitude"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/arrivee_rando_lon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/longitude"
                android:inputType="numberDecimal|numberSigned"
                android:textColorHint="@color/black"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hike_duration"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <Spinner
                android:id="@+id/spinner_jours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_poi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/points_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_of_interest"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <fr.iutrodez.a4awalk.utils.NonScrollListView
                android:id="@+id/points_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageButton
                android:id="@+id/btn_add_poi"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_add"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Ajouter un point"
                app:tint="@color/black"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/participants_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/participants"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <fr.iutrodez.a4awalk.utils.NonScrollListView
                android:id="@+id/participants_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageButton
                android:id="@+id/btn_add_participant"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_add"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Ajouter un participant"
                app:tint="@color/black"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <Button
            android:id="@+id/validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button_text"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/vert"/>

    </LinearLayout>
</ScrollView>